[project]
name = "taskdog-workspace"
version = "0.18.2"
description = "Taskdog monorepo workspace"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Kohei Wada" }
]
license = { text = "MIT" }

# This is a workspace root - install individual packages from packages/ directory
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit>=3.6.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
  "types-python-dateutil>=2.8.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]

# UV workspace configuration
[tool.uv.workspace]
members = [
    "packages/taskdog-core",
    "packages/taskdog-client",
    "packages/taskdog-server",
    "packages/taskdog-ui",
    "packages/taskdog-mcp",
]

[tool.uv.sources]
taskdog-core = { workspace = true }
taskdog-client = { workspace = true }
taskdog-server = { workspace = true }
taskdog-ui = { workspace = true }
taskdog-mcp = { workspace = true }

# mypy configuration
[tool.mypy]
python_version = "3.13"
mypy_path = "packages/*/src"
# Progressive type checking - Phase 3: Moderate strictness
warn_unused_configs = true
warn_redundant_casts = true
# Disabled: SQLAlchemy attr-defined errors are environment-dependent (CI vs local)
warn_unused_ignores = false
# Phase 3: Moderate checks enabled
check_untyped_defs = true
strict_equality = true
warn_return_any = true
warn_no_return = true
# Phase 4: Full strictness enabled
disallow_untyped_defs = true  # Phase 4 (enabled)
disallow_any_generics = true  # Phase 4 (enabled)
disallow_untyped_calls = true  # Phase 4 (enabled)
show_error_context = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Ignore third-party library without type stubs
[[tool.mypy.overrides]]
module = "textual.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dateutil.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "holidays.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true


# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "A",  # flake8-builtins
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "ISC",  # flake8-implicit-str-concat
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C90",  # mccabe
  "N",  # pep8-naming
  "SIM",  # simplify
  "PIE",  # misc lints (unnecessary pass, etc.)
  "RET",  # return statement simplification
  "C4",  # flake8-comprehensions
  "PERF",  # performance anti-patterns
  "PTH",  # flake8-use-pathlib
  "FURB",  # refurb modernization
  "RUF",  # ruff-specific rules
  "TC",  # flake8-type-checking
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "RET504",  # unnecessary assignment before return (intentional for readability)
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"packages/taskdog-core/src/taskdog_core/domain/exceptions/task_exceptions.py" = [
  "N818",
]  # TaskNotFoundException is widely used
"packages/taskdog-core/src/taskdog_core/domain/exceptions/tag_exceptions.py" = [
  "N818",
]  # TagNotFoundException matches TaskNotFoundException naming convention
"packages/*/tests/**/*.py" = ["SIM115", "RUF015"]  # Test code patterns are acceptable
"scripts/**/*.py" = ["B904", "C901"]  # Migration scripts: exception chaining and complexity acceptable
"packages/taskdog-server/src/taskdog_server/api/error_handlers.py" = ["UP047"]  # Type parameters require Python 3.12+

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = [
  "taskdog",
  "taskdog_core",
  "taskdog_server",
]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

# Build system - workspace root doesn't build directly
[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

# Workspace root has no packages (prevent auto-discovery of contrib/, packages/, etc.)
[tool.setuptools]
packages = []
